# OGLPractice

./: .gitignore  CMakeLists.txt  OGLPractice.pro  README.md  camera.cpp  main.cpp  myShader.frs  myShader.vrs  pngtexture.cpp  pngtexture.h  shader.cpp
.github/workflows/: ci.yml
extras/: CMakeLists.txt
extras/glew/: CMakeLists.txt
extras/glfw/: CMakeLists.txt
extras/glm/: CMakeLists.txt
extras/libpng/: CMakeLists.txt
extras/zlib/: CMakeLists.txt
ogl_obj/: objcube.cpp  objcube.h  objpyramid.cpp  objpyramid.h  oglobj.cpp
res/shaders/: myShader.frag  myShader.vrs  standardShader.frag  standardShader.frs  standardShader.vert
shaders/: myShader.frs  myShader.vrs  standardShader.frs
src/: camera.cpp  camera.h  main.cpp  pngtexture.cpp  pngtexture.hpp  shader.cpp  shader.h
src/ogl_obj/: objcube.cpp  objcube.h  objcube.hpp  objpyramid.cpp  objpyramid.h  objpyramid.hpp  oglobj.cpp  oglobj.h  oglobj.hpp
